@@ -19,5 +19,9 @@ cd ..\..
 
 "%JAVA_HOME%\bin\jpackage.exe" --app-version %APP_VERSION%  --license-file LICENSE --icon AudioBookConverter.ico -t msi --win-dir-chooser --win-shortcut --win-menu --win-menu-group AudioBookConverter --name AudioBookConverter --vendor Recoupler --input target\package\audiobookconverter-%APP_VERSION%-windows-installer\audiobookconverter-%APP_VERSION%\app --main-jar lib\audiobookconverter-%APP_VERSION%.jar --runtime-image target\fx-jre --java-options '--enable-preview'
 move AudioBookConverter-%APP_VERSION%.msi target\release\AudioBookConverter-All-Users-%APP_VERSION%.msi
+
 "%JAVA_HOME%\bin\jpackage.exe" --app-version %APP_VERSION%  --license-file LICENSE --icon AudioBookConverter.ico --win-per-user-install -t msi --win-shortcut --win-menu --win-menu-group AudioBookConverter --name AudioBookConverter --vendor Recoupler --input target\package\audiobookconverter-%APP_VERSION%-windows-installer\audiobookconverter-%APP_VERSION%\app --main-jar lib\audiobookconverter-%APP_VERSION%.jar --runtime-image target\fx-jre --java-options '--enable-preview'
 move AudioBookConverter-%APP_VERSION%.msi target\release\AudioBookConverter-Single-User-%APP_VERSION%.msi
+
+"%JAVA_HOME%\bin\jpackage.exe" --app-version %APP_VERSION%  --license-file LICENSE --icon AudioBookConverter.ico --win-per-user-install -t msi --win-shortcut --win-menu --win-menu-group AudioBookConverter --name AudioBookConverter --vendor Recoupler --input target\package\audiobookconverter-%APP_VERSION%-windows-nodeps-installer\audiobookconverter-%APP_VERSION%\app --main-jar lib\audiobookconverter-%APP_VERSION%.jar --runtime-image target\fx-jre --java-options '--enable-preview'
+move AudioBookConverter-%APP_VERSION%.msi target\release\AudioBookConverter-NoDeps-%APP_VERSION%.msi
